--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
-    "coffee-script": "^1.8.0"
+    "body-parser": "^1.9.3",
+    "coffee-script": "^1.8.0",
+    "errorhandler": "^1.3.0",
+    "express": "^4.10.4",
+    "jade": "^1.8.0",
+    "method-override": "^2.3.0",
+    "morgan": "^1.5.0"
   }
 }
