--- a/package.json
+++ b/package.json
@@ -5,7 +5,22 @@
     "errorhandler": "^1.3.0",
     "express": "^4.10.4",
     "jade": "^1.8.0",
+    "lodash": "^2.4.1",
     "method-override": "^2.3.0",
     "morgan": "^1.5.0"
+  },
+  "devDependencies": {
+    "coffee-loader": "^0.7.2",
+    "css-loader": "^0.9.0",
+    "del": "^0.1.3",
+    "extract-text-webpack-plugin": "^0.3.5",
+    "file-loader": "^0.8.1",
+    "glob": "^4.2.1",
+    "hogan.js": "^3.0.2",
+    "less-loader": "^0.7.7",
+    "loader-utils": "^0.2.5",
+    "mustache-loader": "^0.2.0",
+    "style-loader": "^0.8.2",
+    "webpack": "^1.4.13"
   }
 }
